@@ -21,6 +21,7 @@ The following bugs have been fixed in the 1.4.6 release.
 K  4906	IMAP Store socket leak on connect with ProtocolException
 K  5086	STARTTLS when already using SSL may cause connection to fail
 K  5090	Yahoo: Error reading emails containing "undisclosed recipients"
+<no id>	add mail.imap.ignorebodystructuresize to work around server bugs
 
 
 		  CHANGES IN THE 1.4.5 RELEASE
